Declare scala version in a separate repository
Similar to what rules_java does with repote_java_repository

Generated repository compiles scalac worker and exposes it as a toolchain
together with scala dependencies

Toolchains could be constrained with config_setting

Pass simple case bazel build //test:HelloLib

Could be part of scala_config which could take a list of structs to generate repositories

Probably could be mapped in bzlmod with extensions and tag_class

--- a/src/java/io/bazel/rulesscala/scalac/BUILD
+++ b/src/java/io/bazel/rulesscala/scalac/BUILD
@@ -59,3 +59,30 @@ filegroup(
     ),
     visibility = ["//visibility:public"],
 )
+
+# filegroup or export_files doesn't work because java_binary emits warning about misplaced sources
+# packaging sources to srcjar does solve this issue
+load("//scala/runtime:bootstrap.bzl", "source_jar")
+
+source_jar(
+    name = "scalac_2",
+    srcs = [
+        "ReportableMainClass.java",
+        "ScalacInvoker.java",
+        "ScalacInvokerResults.java",
+        "ScalacWorker.java",
+    ],
+    outs = "scalac_2.srcjar",
+    visibility = ["//visibility:public"],
+)
+
+source_jar(
+    name = "scalac_3",
+    srcs = [
+        "ReportableMainClass.java",
+        "ScalacInvoker.java",
+        "ScalacInvoker3.java",
+    ],
+    outs = "scalac_3.srcjar",
+    visibility = ["//visibility:public"],
+)
