--- a/src/java/io/bazel/rulesscala/scalac/deps_tracking_reporter/BUILD
+++ b/src/java/io/bazel/rulesscala/scalac/deps_tracking_reporter/BUILD
@@ -11,3 +11,19 @@ filegroup(
     ],
     visibility = ["//visibility:public"],
 )
+
+load("//scala/runtime:bootstrap.bzl", "source_jar")
+
+[
+    source_jar(
+        name = d,
+        srcs = glob(["%s/*.java" % d]),
+        outs = "%s.srcjar" % d,
+        visibility = ["//visibility:public"],
+    )
+    for d in [
+        "after_2_12_13_and_before_2_13_12",
+        "after_2_13_12",
+        "before_2_12_13",
+    ]
+]
