--- a/src/java/io/bazel/rulesscala/scalac/reporter/BUILD
+++ b/src/java/io/bazel/rulesscala/scalac/reporter/BUILD
@@ -34,3 +34,26 @@ java_proto_library(
     visibility = ["//visibility:public"],
     deps = [":scala_deps_proto"],
 )
+
+load("//scala/runtime:bootstrap.bzl", "source_jar")
+
+[
+    source_jar(
+        name = d,
+        srcs = glob(["%s/*.java" % d]),
+        outs = "%s.srcjar" % d,
+        visibility = ["//visibility:public"],
+    )
+    for d in [
+        "after_2_12_13_and_before_2_13_12",
+        "after_2_13_12",
+        "before_2_12_13",
+    ]
+]
+
+source_jar(
+    name = "scala_3",
+    srcs = ["PlaceholderForEmptyScala3Lib.java"],
+    outs = "scala_3.srcjar",
+    visibility = ["//visibility:public"],
+)
