Add compiler source download integrity values (#1749)
* Add compiler source download integrity values

Eliminates the "canonical reproducible form" warnings that often appear
for users that enable compiler dependency tracking. Fixes #1743.

Emits a detailed error message if the configured Scala version is
unknown to rules_scala, and isn't provided by a
`scala_deps.compiler_srcjar` object. This message provides guidance
on how to create a suitable `scala_deps.compiler_srcjar` object.

Details:

- Adds `scripts/update_compiler_sources_integrity.py` to generate
  `scala/private/macros/compiler_sources_integrity.bzl`. Refactored code
  from `scripts/update_protoc_integrity.py` into
  `scripts/lib/update_integrity.py` for reuse by the new script.

- Adds `test/shell/test_compiler_sources_integrity.sh` and adds it to
  `test_rules_scala.sh`. Adds the `test/compiler_sources_integrity` repo
  for use by the new test suite. The test suite is fast due to the test
  repo only containing an alias to `@scala_compiler_sources//:src`.

- Fixes a problem with the regex in `run_tests` from `test_helper.sh`
  that prevented the test skipping mechanism from working.

---

This eliminates an annoying warning for users, while providing improved
build integrity. Win/win!

The refactoring of common code into `scripts/lib` eliminated a lot of
potential duplication. It's also exposed a common pattern for generating
download integrity files for different artifacts.

* Fix lint, unbound variable, missing config errors

Fixes breakages in build:

- https://buildkite.com/bazel/rules-scala-scala/builds/5652

The lint fix is for `test/compiler_sources_integrity/BUILD`.

The unbound variable error on macOS was in
`test/shell/test_compiler_sources_integrity.sh`, even though the
variable should've been bound. The script sets `-euo pipefail` anyway.

Took the missing config setup from `test/shell/test_bzlmod_macros.sh`
and added it to `test/shell/test_compiler_sources_integrity.sh`.

* Fix unbound va

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ test/semanticdb/tempsrc
 # From scripts/create_repository.py
 repository-artifacts.json
 
+# From scripts/*.py
+**/__pycache__/
+
 # Until it settles down
 **/MODULE.bazel.lock
 
@@ -25,3 +28,4 @@ tmp/
 
 # Not required by tests.
 deps/latest/.bazelversion
+
