--- a/.bazelignore
+++ b/.bazelignore
@@ -14,6 +14,7 @@ examples/testing/multi_frameworks_toolchain
 examples/testing/scalatest_repositories
 examples/testing/specs2_junit_repositories
 examples/twitter_scrooge
+test/compiler_sources_integrity
 test/proto_cross_repo_boundary/repo
 test_cross_build
 third_party/test/example_external_workspace
