Simplify test_dependency_versions.sh (#1758)
Removes almost all of the copied `deps/test` sources and targets in
favor of invoking `@rules_scala` and `@multi_frameworks_toolchain` tests
directly. Moves targets depending on `@rules_python` and `@rules_shell`
to new packages so test packages don't break when `@rules_scala` isn't
the main module.

Introduces `RULES_SCALA_TARGETS`, `MULTI_FRAMEWORKS_TOOLCHAIN_TARGETS`,
and `ALL_TARGETS` arrays to easily specify compatibility test targets
instead of copying them. Only keeps a single `ScalafmtTest` target
within `deps/test/BUILD.bazel.test`, which is a special case (described
below) and executes successfully on Windows.

Though these are new packages, they're comprised of existing files and
targets from their parent packages:

- //test/jmh/runtime
- //test/sh_tests
- //test/src/main/scala/scalarules/test/twitter_scrooge/strings

Also:

- Marks every `bazel_dep` for `@latest_dependencies` with
  `dev_dependency = True`.

- Replaces `$(location ...)` instances in moved targets with
  `$(rootpath ...)` (and in one case, with `$(execpath ...)`) per
  bazelbuild/bazel#25198.

---

While drafting a blog post describing `test_dependency_versions.sh`, I
revisited the decision to copy targets and files in #1729 and #1738.
Executing test targets from `@rules_scala` directly from the test module
actually works, making the test far less complex, and making for better
testing advice.

This required moving targets that referenced dev dependencies to their
own packages, fixing `@rules_scala` test package breakages. Making the
`@latest_dependencies` module a dev dependency eliminated module version
warnings from `@multi_frameworks_toolchain`, since the test sets older
dependency versions. Then making `@latest_dependencies` a dev dependency
everywhere, instead of only in `@multi_frameworks_toolchain`, seemed
more consistent.

The test retains the `//:ScalafmtTest` target because `rules_scala`
doesn't actually provide Scalafmt rules, but o

--- a/deps/test/MODULE.bazel.template
+++ b/deps/test/MODULE.bazel.template
@@ -1,14 +1,17 @@
 """Bazel module template for test/shell/test_deps_versions.sh tests."""
 
-module(
-    name = "rules_scala_deps_versions_test",
-    bazel_compatibility = [">=${bazelversion}"],
-)
+module(name = "rules_scala_deps_versions_test")
 
 bazel_dep(name = "rules_scala")
 local_path_override(
     module_name = "rules_scala",
     path = "../..",
+)
+
+bazel_dep(name = "multi_frameworks_toolchain")
+local_path_override(
+    module_name = "multi_frameworks_toolchain",
+    path = "../../examples/testing/multi_frameworks_toolchain",
 )
 
 bazel_dep(name = "bazel_skylib")
