Upgrade Scala 3.7 to 3.7.2 (was 3.7.1) (#1757)
* Upgrade Scala 3.7 to 3.7.2 (was 3.7.1)

* Update compiler sources integrity

* Fix internal compiler API incompatibility for reporting.NoExplenation class

* Fix lint of BUILD file

--- a/src/java/io/bazel/rulesscala/scalac/reporter/BUILD
+++ b/src/java/io/bazel/rulesscala/scalac/reporter/BUILD
@@ -27,8 +27,11 @@ java_library(
         between_3_0_and_3_3 = glob(["scala_3/*.java"]) + [
             "since_3_before_3_3/CompilerCompat.java",
         ],
-        since_3_3 = glob(["scala_3/*.java"]) + [
-            "since_3_3/CompilerCompat.java",
+        between_3_3_and_3_7_2 = glob(["scala_3/*.java"]) + [
+            "since_3_3_before_3_7_2/CompilerCompat.java",
+        ],
+        since_3_7_2 = glob(["scala_3/*.java"]) + [
+            "since_3_7_2/CompilerCompat.java",
         ],
     ) + ["//src/java/io/bazel/rulesscala/scalac/deps_tracking_reporter"],
     visibility = ["//visibility:public"],
