Fix last_green w/bazel_worker_api rules_java 8.15 (#1756)
* Fix last_green w/bazel_worker_java rules_java 8.15

Uses the `bazel_worker_java` module and a legacy `WORKSPACE` shim to
replace `@bazel_tools//src/main/protobuf:worker_protocol_java_proto`.
This, and bumping `rules_java` to 8.14.0, fixes breakages in the latest
`last_green` Bazel from commit 00b48b27aa216befc419e540919a1f1df4cda337.

Note, though, that this change bumps `rules_java` to 8.15.0, since it's
now available. This change also updates:

- `gazelle`: 0.44.0 => 0.45.0
- `rules_go`: 0.55.1 => 0.56.1
- `rules_shell`: 0.5.0 => 0.5.1

Also:

- Removes the `--incompatible_autoload_externally` flag from `.bazelrc`.

- Removes the Bazel 9.0.0-pre.20250710.1 CI job added by #1755, since
  it's no longer necessary given the fix from this change.

- Fixes `_get_compiler_srcjar` to return empty `compiler_srcjar_objects`
  instead of returning a valid object. `test_compiler_srcjar_error
  2.12.11` from `dt_patches/dt_patch_test.sh` caught this under
  `WORKSPACE`. Added `test_fail_if_compiler_srcjar_object_is_empty` to
  `test/shell/test_compiler_sources_integrity.sh` to catch the specific
  problem sooner.

- Fixed regex in `target_file_location` from `test_helper.sh` to work
  with Bazel 6.5.0, and fixed unbound variable in `fail` message.

- Added logic to `teardown_suite` in `test_bzlmod_macros.sh` to avoid
  unbound variable breakage when running under Bazel 6.5.0.

- Added logic to skip `test_check_module_bazel_template` under Bazel 6
  in `test_version.sh`.

- Removed restriction to use `protobuf` v29 or lower with Bazel 6 from
  `README.md`.

- Added `scala_compiler_source.*` to the regular expressions for "canonical
  reproducible" messages in `dt_patches/dt_patch_test.sh`. This resolved
  a test breakage when `rules_python` began to emit a "canonical
  reproducible" message. (Also changed `--expunge` to
  `--expunge_async`.)

---

bazelbuild/bazel#26477, which also landed in the 9.0.0-pre.20250714.1
r

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -42,7 +42,7 @@ single_version_override(
 bazel_dep(name = "rules_java", version = "7.6.0")
 single_version_override(
     module_name = "rules_java",
-    version = "8.14.0",
+    version = "8.15.0",
 )
 
 bazel_dep(name = "rules_proto", version = "6.0.0")
@@ -65,6 +65,8 @@ single_version_override(
     patches = ["//protoc:0001-protobuf-19679-rm-protoc-dep.patch"],
     version = "31.1",
 )
+
+bazel_dep(name = "bazel_worker_java", version = "0.0.6")
 
 scala_protoc = use_extension(
     "//scala/extensions:protoc.bzl",
@@ -254,11 +256,11 @@ bazel_dep(
 )
 bazel_dep(
     name = "rules_go",
-    version = "0.55.1",
+    version = "0.56.1",
     dev_dependency = True,
     repo_name = "io_bazel_rules_go",  # for com_github_bazelbuild_buildtools
 )
-bazel_dep(name = "gazelle", version = "0.44.0", dev_dependency = True)
+bazel_dep(name = "gazelle", version = "0.45.0", dev_dependency = True)
 
 go_sdk = use_extension(
     "@io_bazel_rules_go//go:extensions.bzl",
@@ -284,7 +286,7 @@ go_deps = use_extension(
 # - https://go.dev/ref/mod#checksum-database
 #
 #   go list -m golang.org/x/tools@latest
-#   curl https://sum.golang.org/lookup/golang.org/x/tools@v0.34.0
+#   curl https://sum.golang.org/lookup/golang.org/x/tools@v0.35.0
 go_deps.module(
     path = "golang.org/x/tools",
     sum = "h1:mBffYraMEf7aa0sB+NuKnuCy8qI/9Bughn8dC2Gu5r0=",
@@ -302,4 +304,4 @@ use_repo(
 )
 
 bazel_dep(name = "rules_python", version = "1.5.1", dev_dependency = True)
-bazel_dep(name = "rules_shell", version = "0.5.0", dev_dependency = True)
+bazel_dep(name = "rules_shell", version = "0.5.1", dev_dependency = True)
