--- a/test/BUILD
+++ b/test/BUILD
@@ -476,8 +476,8 @@ scala_specs2_junit_test(
     name = "data_location_expansion",
     size = "small",
     srcs = ["src/main/scala/scalarules/test/location_expansion/LocationExpansionTest.scala"],
-    data = ["@bazel_tools//src/main/protobuf:worker_protocol_java_proto"],
-    jvm_flags = ["-Dlocation.expanded='$(rootpaths @bazel_tools//src/main/protobuf:worker_protocol_java_proto)'"],
+    data = ["@bazel_worker_java//:worker_protocol_java_proto"],
+    jvm_flags = ["-Dlocation.expanded='$(rootpaths @bazel_worker_java//:worker_protocol_java_proto)'"],
     suffixes = ["Test"],
 )
 
